# pytocpp

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: hello_world.py  ir_generation_demo.py  type_checking_demo.py
src/pytocpp/: __init__.py  cli.py  code_generator.py  compiler.py  ir_generator.py  parser.py  transpiler.py  type_checker.py
tests/: __init__.py  test_cli.py  test_ir_generator.py  test_parser.py  test_type_checker.py
